[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/texRoad.gd" type="Script" id=1]
[ext_resource path="res://Assets/Levels/img_desert.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Road.gd" type="Script" id=3]
[ext_resource path="res://Scripts/camRoad.gd" type="Script" id=4]
[ext_resource path="res://Assets/img_safe.png" type="Texture" id=5]
[ext_resource path="res://Assets/Sounds/snd_theme2.wav" type="AudioStream" id=6]
[ext_resource path="res://Scenes/bodyBorder.tscn" type="PackedScene" id=7]
[ext_resource path="res://ThemeMain.tres" type="Theme" id=8]

[node name="Road" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = ExtResource( 8 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="texRoad" type="TextureRect" parent="."]
show_behind_parent = true
margin_top = -1920.0
margin_right = 1080.0
margin_bottom = 1920.0
mouse_filter = 2
texture = ExtResource( 2 )
stretch_mode = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bodyBorder" parent="." instance=ExtResource( 7 )]

[node name="timerSpawn" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="camRoad" type="Camera2D" parent="."]
position = Vector2( 540, 960 )
current = true
drag_margin_left = 1.0
drag_margin_right = 1.0
editor_draw_limits = true
editor_draw_drag_margin = true
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="camRoad"]
visible = false
texture = ExtResource( 5 )

[node name="Label" type="Label" parent="camRoad"]
visible = false
margin_left = -538.0
margin_top = -43.0
margin_right = 541.0
margin_bottom = 38.0
custom_colors/font_color = Color( 1, 0.376471, 0.376471, 1 )
text = "initial"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sndTheme" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
[connection signal="timeout" from="timerSpawn" to="." method="_on_timerSpawn_timeout"]
[connection signal="finished" from="sndTheme" to="." method="_on_sndTheme_finished"]
